      parameter. Now urwid is imported; thanks to Neil Mayhew for the hint.
      (Closes: #484534)

  [ Ben Finney ]
  * reportbug
  * querybts
  * script
    - Standardise all Python programs to same shebang line as per Debian
      Python policy §1.3.2.
  * reportbug_submit.py
  * checks/compare_pseudo-pkgs_lists.py
    - Remove shebang line from non-exectable modules.

 -- Ben Finney <ben+debian@benfinney.id.au>  Thu, 12 Jun 2008 17:45:51 +1000

reportbug (3.41) unstable; urgency=high

  [ Sandro Tosi ]
  * Security bugfix release, hence urgency is set to high
  * querybts, reportbug_submit.py
    - os.curdir is not added to sys.path anymore, thanks to Thomas Arendsen
      Hein <thomas@intevation.de> for the report; Fixes: CVE-2008-2230;
      Closes: #484311

  [ Chris Lawrence ]
  * debian/control
    - Added self to Uploaders
    - Set Maintainer to new list on alioth.

  [ Y Giridhar Appaji Nag ]
  * debianbts.py
    - Remove kde, ximian (and helixcode) and mandriva, they use bugzilla
    - Remove grml, they use roundup
  * --body-file doesn't allow preview of report, don't suggest using it with
    saved files.  Thanks Shai Berger <shai@platonix.com> for the bug report
    (Closes: #484245)
  * remove calls to sys.path.append('/usr/share/reportbug') from reportbug

 -- Sandro Tosi <matrixhasu@gmail.com>  Wed, 04 Jun 2008 18:07:23 +0200

reportbug (3.40) unstable; urgency=low

  [ Sandro Tosi ]
  * debian/control
    - added Giridhar and me to Uploaders
    - added "DM-Upload-Allowed: yes"
    - bump Standards-Version to 3.7.3
    - moved python-central to Build-Depends-Indep and version bump to >= 0.5.14
    - updated Conflicts with python-central version lower than 0.5.13 (Closes:
      #418166)
    - added Vcs-{Svn,Browser} fields
    - added Homepage field
  * debian/copyright
    - clear separation of author, copyright and license notices
  * debian/menu
    - section updated to "Applications/System/Administration"
  * debian/rules